# pyconjp-image-search

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: copy_metadata_to_clip_db.py  download_all.py  fix_event_names.py  prepare_dbs.py
src/pyconjp_image_search/: __init__.py  config.py  db.py  models.py
src/pyconjp_image_search/embedding/: __init__.py  clip.py  face_repository.py  insightface_embedder.py  object_repository.py  repository.py  siglip.py  yolo_detector.py
src/pyconjp_image_search/manager/: __init__.py  downloader.py  flickr_client.py  repository.py  schema.py
src/pyconjp_image_search/search/: __init__.py  app.py  query.py
tests/: conftest.py  test_downloader.py  test_embedding_repository.py  test_flickr_client.py  test_models.py  test_repository.py  test_schema.py  test_search_query.py
web/: biome.json  firebase.json  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.css  App.tsx  main.tsx
web/src/components/: CropOverlay.tsx  EventFilter.tsx  FaceThumbnails.tsx  Gallery.tsx  GalleryItem.tsx  ImageUpload.tsx  LoadMoreButton.tsx  LoadingOverlay.tsx  ModelIndicator.tsx  ModelSelector.tsx  Preview.tsx  SearchBar.tsx  TagFilter.tsx  ThumbStrip.tsx
web/src/hooks/: useCLIPEncoder.ts  useDuckDB.ts  useEncoder.ts  useImageSearch.ts
web/src/lib/: clip.ts  duckdb.ts  encoder.ts  flickr.ts  models.ts  search.ts
web/src/types/: index.ts  translator.d.ts
